# wrench-pedagogic-modules

./: .gitignore  Dockerfile  README.md  find_graph_layout.py
activity_0_network_primer/: CMakeLists.txt  Dockerfile
activity_0_network_primer/include/: ActivityWMS.h
activity_0_network_primer/src/: ActivityWMS.cpp  Simulator.cpp
activity_1_getting_started/: CMakeLists.txt  Dockerfile  build.sh  workflow_graph.json
activity_1_getting_started/include/: ActivityScheduler.h  ActivityWMS.h
activity_1_getting_started/platform_files/: platform.xml
activity_1_getting_started/src/: ActivityScheduler.cpp  ActivityWMS.cpp  Simulator.cpp  Simulator2.cpp
activity_1_getting_started/visualization/: Dockerfile  app.js  package.json  workflow_data.json
activity_1_getting_started/visualization/public/: scripts.js
activity_1_getting_started/visualization/views/: index.ejs
activity_1_getting_started/workflow_files/: workflow.dax
activity_2_parallelism/: CMakeLists.txt  workflow_graph_no_ram.json  workflow_graph_uses_ram.json
activity_2_parallelism/include/: ActivityScheduler.h  ActivityWMS.h
activity_2_parallelism/platform_files/: platform.xml
activity_2_parallelism/src/: ActivityScheduler.cpp  ActivityWMS.cpp  Simulator.cpp  WorkflowToJSON.cpp
activity_3_case_study/: run_options.py
activity_3_case_study/include/: ActivityScheduler.h  ActivityWMS.h
activity_3_case_study/src/: ActivityScheduler.cpp  ActivityWMS.cpp  Simulator.cpp
data_server/: Dockerfile  app.js  package-lock.json  package.json
docs/: _config.yml  _config_dev.yml  glossary.md  index.md  run_locally.sh
docs/_activities/: activity_0.md  activity_1.md  activity_1_lefover_text.txt  activity_2.md  activity_3.md  computing_fundamentals.md  data_transfer_primer.md  multi_core.md  primer_on_file_transfer_times.md  primer_on_networking.md  primer_on_workflow_executions.md  what_is_this_about.md
docs/_data/: glossary.yml
docs/_includes/: head.html  sidebar.html
docs/_layouts/: default.html
docs/_pedagogic_modules/: IO_lesson.md  IO_lesson.md_draft  README  client_server.md_DRAFT  master_worker.md_DRAFT  multi_core_computing.md  multi_core_computing_dependencies.md.draft  multi_core_computing_io.md.draft  multi_core_fundamentals.md  networking_fundamentals.md  sequential_computing_fundamentals.md  single_core_capstone.md_draft  single_core_computing.md  what_is_this_about.md  workflow_case_study.md  workflow_data_locality.md  workflow_execution_data_locality.md  workflow_execution_fundamentals.md  workflow_execution_parallelism.md  workflow_execution_resource_provisioning.md  workflow_executions.md  workflow_fundamentals.md  workflow_parallelism.md
docs/public/: Vagrantfile
simulations/: Dockerfile
simulations/activity_0_network_primer/: CMakeLists.txt
simulations/activity_1_getting_started/: CMakeLists.txt  build.sh
simulations/activity_2_parallelism/: CMakeLists.txt  build.sh
simulations/activity_3_case_study/: run_options.py
simulations/activity_multi_core/: CMakeLists.txt  build.sh
simulations/networking_fundamentals/: build.sh
test_activity/: CMakeLists.txt  Dockerfile
test_activity/src/: SimpleSimulatorCloud.cpp  SimpleWMS.cpp
visualization/: Dockerfile  app.js  package-lock.json  package.json  passport-setup.js
(+63 files in other folders)
